Agregar reproductor de música modular con componentes y estilos de Bootstrap

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROYECTO PRIMER PARCIAL</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>🎵 Mini Reproductor de Música</title>
+  <!-- Bootstrap local -->
+  <link rel="stylesheet" href="./public/vendor/bootstrap/css/bootstrap.min.css" />
 </head>
-<body>
-    
+<body class="bg-dark text-white text-center p-4">
+  <h2>🎶 Mini Reproductor de Música</h2>
+  <div class="container mt-4">
+    <music-player></music-player>
+  </div>
+
+  <script type="module" src="./public/js/main.js"></script>
 </body>
 </html>
