--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🎵 Mini Reproductor de Música</title>
-  <!-- Bootstrap local -->
   <link rel="stylesheet" href="./public/vendor/bootstrap/css/bootstrap.min.css" />
 </head>
 <body class="bg-dark text-white text-center p-4">
-  <h2>🎶 Mini Reproductor de Música</h2>
+  <h2>Mini Reproductor de Música</h2>
   <div class="container mt-4">
     <music-player></music-player>
   </div>
