Mejorar el reproductor de música: agregar lógica de favoritos, actualizar estilos y optimizar rutas de audio.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mini Reproductor de Música</title>
-  <link rel="stylesheet" href="./public/vendor/bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-</head>
-<body class="bg-dark text-white text-center p-4">
-  <h2>Mini Reproductor de Música</h2>
-  <div class="container mt-4">
-    <music-player></music-player>
-  </div>
-
-  <script type="module" src="./public/js/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mini Reproductor de Música</title>
+    <link
+      rel="stylesheet"
+      href="./public/vendor/bootstrap/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+  </head>
+  <body class="bg-dark text-white text-center p-4">
+    <h2>Mini Reproductor de Música</h2>
+    <div class="container mt-4">
+      <music-player></music-player>
+    </div>
+    <p style="font-size: 0.75rem; opacity: 0.6; margin-top: 20px">
+      *Este reproductor es un proyecto académico. Las canciones y portadas son
+      propiedad de sus autores originales. Sin fines de lucro.*
+    </p>
+    <script type="module" src="./public/js/main.js"></script>
+  </body>
 </html>
